--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "web-midi-nanokontrol",
+	"name": "web-midi-message",
 	"version": "1.0.0",
-	"description": "Configure Korg Nanokontrol2 via web-midi",
-	"main": "nano-wave.js",
+	"description": "A minimal way to construct MIDI messages",
+	"main": "web-midi-message",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -13,7 +13,5 @@
 	"keywords": [],
 	"author": "rektide de la faye",
 	"license": "X11",
-	"dependencies": {
-		"web-midi-api": "^1.4.4"
-	}
+	"dependencies": {}
 }
