--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "web-midi-message",
 	"version": "1.0.0",
 	"description": "A minimal way to construct MIDI messages",
-	"main": "web-midi-message",
+	"main": "index.js",
+	"module": "web-midi-message.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -13,5 +14,14 @@
 	"keywords": [],
 	"author": "rektide de la faye",
 	"license": "X11",
-	"dependencies": {}
+	"dependencies": {
+		"define-binding": "^1.0.1"
+	},
+	"@std/esm": {
+		"esm": "js",
+		"cjs": {
+			"cache": true,
+			"namedExports": true
+		}
+	}
 }
